2004-08-20 Chris Wiebe

	make PathUtil visible
	* browser/org/eclipse/cdt/internal/core/browser/PathUtil.java
	* browser/org/eclipse/cdt/internal/core/browser/TypeReference.java
	* browser/org/eclipse/cdt/internal/core/browser/TypeSearchScope.java

2004-08-18 Alain Magloire

	Work on the ResolverModel, we make the Core Model aware of the changes.
	Noticeable changes ICFileTypeResolver is tied to a container, this change
	things considerably when extending the implementations.  Sam orignal works
	did not with some pros && cons .. this also has pros and cons.

	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
	* model/org/eclipse/cdt/internal/core/model/ResolverProcessor.java

	* src/org/eclipse/cdt/core/filetype/ICFielTypeResolver.java
	* src/org/eclipse/cdt/core/filetype/IResolverChangeListener.java
	* src/org/eclipse/cdt/core/filetype/IResolverModel.java
	* src/org/eclipse/cdt/core/filetype/ResolverChangeEvent.java
	* src/org/eclipse/cdt/core/filetype/ResolverDelta.java

	* src/org/eclipse/cdt/core/internal/filetype/CFileTypeResolver.java
	* src/org/eclipse/cdt/core/internal/filetype/CustomResolver.java
	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java
	* src/org/eclipse/cdt/core/internal/filetype/WorkspaceResolver.java
	
2004-08-18 Alain Magloire

	When running the CDescriptorOperation make sure we have an ICDescriptor.

	* src/org/eclipse/cdt/internal/core/CDescriptorManager.java

2004-08-18 Alain Magloire

	The DeltaProcessor should update the sourceRoot also if
	sourceRoot == ICProject

	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2004-08-18 Chris Wiebe

	fix for bug #71353
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCache.java
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCacherJob.java

2004-08-15 Chris Wiebe

	make isOnSourceEntry(IPath) public method
	* model/org/eclipse/cdt/core/model/ISourceRoot.java
	* model/org/eclipse/cdt/internal/core/model/SourceRoot.java
