@@ -1,3 +1,11 @@
+2004-08-21 Alain Magloire
+
+	(Partial, since the indexer is still not aware of this)
+	Fix for 66559: Work on the ResolverModel
+	* model/org/eclipse/cdt/internal/core/model/ResolverProcessor.java
+	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java
+	* src/org/eclipse/cdt/core/internal/filetype/WorkspaceResolver.java
+
 2004-08-20 Chris Wiebe
 
 	make PathUtil visible
